# API-key-Manager

./: .env.example  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: initial_data.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  keys.py
backend/app/core/: security.py
backend/app/middleware/: api_key.py
backend/app/models/: __init__.py  api_key.py  refresh_token_session.py  user.py
backend/app/schemas/: __init__.py  api_key.py  user.py
backend/tests/: conftest.py  test_api_key_middleware.py  test_auth_and_keys.py  test_initial_data.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: axios.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx  auth.js
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
